--- a/Locar/WebContent/register.html
+++ b/Locar/WebContent/register.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="global.css">
-  <link rel="stylesheet" href="register.css">
+  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/register.css">
 
   <title>Document</title>
 </head>
