Login & Register - Featured Implemented

--- a/Locar/WebContent/register.html
+++ b/Locar/WebContent/register.html
@@ -14,7 +14,7 @@
 <main>
   <div class="registerContent">
     <h1>Registro</h1>
-    <form class="registerForm" action="index.html" method="POST">
+    <form class="registerForm" action="auth/register" method="POST">
 
       <div class="doubleForm">
         <input type="text" name="username" placeholder="Usuário" pattern="^(?!.*\.\.)(?!.*\.$)[^\W][\w.]{0,29}$" required>
